--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Midiocre — Demo Player</title>
+  <title>MIDIocre — Demo Player</title>
   <link rel="stylesheet" href="demo.css">
 </head>
 <body>
   <div id="app">
     <header>
-      <h1>🎵 Midiocre Player</h1>
+      <h1>🎵 MIDIocre Player</h1>
       <p class="tagline">Mediocre by name, excellent by implementation.</p>
       <div class="header-controls">
         <div class="theme-picker">
