--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -9,8 +9,8 @@
 <body>
   <div id="app">
     <header>
-      <h1>🎵 MIDIocre Player</h1>
-      <p class="tagline">Mediocre by name, excellent by implementation.</p>
+      <!-- <h1>🎵 MIDIocre Player</h1>
+      <p class="tagline">Mediocre by name, excellent by implementation.</p> -->
       <div class="header-controls">
         <div class="theme-picker">
           <button class="theme-btn" data-theme="midnight" title="Midnight">🌙</button>
