--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -5,27 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MIDIocre Player</title>
     <link rel="stylesheet" href="demo.css">
+    <style>
+        /* Tiny override to force pure retro font everywhere (no CDN ever) */
+        body, #app, button, select, input {
+            font-family: 'Courier New', 'Lucida Console', 'Consolas', monospace !important;
+        }
+    </style>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="header">| PütersDcat | FULLY CRACKED |</div>
+    <div class="wrapper" id="wrapper">
+        <div class="scanlines"></div>
+        <div class="crt"></div>
+        <!-- YOUR EDITED RETRO GRAFFITI BOMB HEADER -->
+        <div class="header">| PütersDcat | FULLY CRACKED |
+        </div>
         
-        <svg id="bomb-svg" width="920" height="480" viewBox="0 0 920 480" xmlns="http://www.w3.org/2000/svg" class="bomb-svg">
+        <svg width="920" height="480" viewBox="0 0 920 480" xmlns="http://www.w3.org/2000/svg">
             <defs>
                 <pattern id="brick" patternUnits="userSpaceOnUse" width="92" height="48">
-                    <rect id="brick-bg" width="92" height="48" fill="#aa0000"/>
-                    <rect id="brick-line1" width="92" height="8" fill="#660000"/>
-                    <rect id="brick-line2" x="46" y="24" width="46" height="8" fill="#660000"/>
+                    <rect width="92" height="48" fill="#aa0000"/>
+                    <rect width="92" height="8" fill="#660000"/>
+                    <rect x="46" y="24" width="46" height="8" fill="#660000"/>
                     <line x1="0" y1="0" x2="92" y2="0" stroke="#440000" stroke-width="4"/>
                     <line x1="0" y1="24" x2="92" y2="24" stroke="#440000" stroke-width="4"/>
                     <line x1="46" y1="0" x2="46" y2="48" stroke="#440000" stroke-width="4"/>
                 </pattern>
                 <linearGradient id="graffiti" x1="0%" y1="0%" x2="0%" y2="100%">
-                    <stop id="g-stop1" offset="0%" stop-color="#ff88ff"/>
-                    <stop id="g-stop2" offset="25%" stop-color="#00ffcc"/>
-                    <stop id="g-stop3" offset="50%" stop-color="#4488ff"/>
-                    <stop id="g-stop4" offset="75%" stop-color="#ff2288"/>
-                    <stop id="g-stop5" offset="100%" stop-color="#aa00ff"/>
+                    <stop offset="0%" stop-color="#ff88ff"/>
+                    <stop offset="25%" stop-color="#00ffcc"/>
+                    <stop offset="50%" stop-color="#4488ff"/>
+                    <stop offset="75%" stop-color="#ff2288"/>
+                    <stop offset="100%" stop-color="#aa00ff"/>
                 </linearGradient>
                 <filter id="neon" x="-50%" y="-50%" width="200%" height="200%">
                     <feGaussianBlur stdDeviation="6" result="glow1"/>
@@ -40,25 +50,24 @@
                     <feDropShadow dx="0" dy="0" stdDeviation="3" flood-color="#000000" flood-opacity="1"/>
                 </filter>
             </defs>
+            <!-- RED BRICK BAR -->
             <rect x="0" y="0" width="920" height="92" fill="url(#brick)"/>
+            <!-- THICK BLACK OUTLINE -->
             <text x="460" y="278" font-family="Impact, Arial Black, sans-serif" font-size="218" font-weight="900" fill="#111111" stroke="#000000" stroke-width="42" stroke-linejoin="round" paint-order="stroke fill" text-anchor="middle" dominant-baseline="middle" filter="url(#thick)">MIDIocre</text>
+            <!-- VIBRANT GRAFFITI FILL + NEON -->
             <text x="460" y="278" font-family="Impact, Arial Black, sans-serif" font-size="218" font-weight="900" fill="url(#graffiti)" stroke="#112233" stroke-width="14" stroke-linejoin="round" paint-order="stroke fill" text-anchor="middle" dominant-baseline="middle" filter="url(#neon)">MIDIocre</text>
+            <!-- WHITE HIGHLIGHT / DRIP SHINE -->
             <text x="452" y="265" font-family="Impact, Arial Black, sans-serif" font-size="218" font-weight="900" fill="#ffffff" opacity="0.35" stroke="none" text-anchor="middle" dominant-baseline="middle">MIDIocre</text>
+            <!-- YOUR EDITED SIGNATURE -->
             <text x="760" y="430" font-family="Courier New, monospace" font-size="42" fill="#ff4422" opacity="0.9" text-anchor="end">ÂÎ ŠŁØP ČŘÊŴ</text>
+            <!-- TINY TAG -->
             <text x="160" y="430" font-family="Courier New, monospace" font-size="26" fill="#00ff88" opacity="0.8" text-anchor="start">MIDIocre Player</text>
-            <g id="fuse-group">
-                <path id="wick" d="M 110 68 Q 85 105 78 175 Q 82 210 95 235" fill="none" stroke="#331100" stroke-width="14" stroke-linecap="round"/>
-                <ellipse id="flame" cx="95" cy="235" rx="9" ry="18" fill="#ff8800" opacity="0.9"/>
-                <circle id="spark1" class="spark" cx="92" cy="160" r="4.5" fill="#ffff00"/>
-                <circle id="spark2" class="spark" cx="79" cy="185" r="3" fill="#ffcc00" style="animation-delay:0.18s"/>
-                <circle id="spark3" class="spark" cx="99" cy="205" r="5" fill="#ffaa00" style="animation-delay:0.35s"/>
-            </g>
         </svg>
 
+        <!-- YOUR APP CONTROLS WRAPPED INSIDE THE KICK-ASS BORDER -->
         <div id="app">
+            <!-- theme picker stays exactly where it was -->
             <header>
-                <h1>🎵 MIDIocre Player</h1>
-                <div class="tagline">Mediocre by name, excellent by implementation.</div>
                 <div class="header-controls">
                     <div class="theme-picker">
                         <button class="theme-btn" data-theme="midnight">🌙</button>
@@ -70,115 +79,151 @@
                 </div>
             </header>
 
-            <div id="controls">
-                <div class="control-row transport">
-                    <button class="transport-btn" title="Previous">⏮</button>
-                    <button class="transport-btn" title="Rewind">⏪</button>
-                    <button id="play-pause-btn" class="transport-btn play-btn" title="Play / Pause">▶</button>
-                    <button class="transport-btn" title="Stop">⏹</button>
-                    <button class="transport-btn" title="Fast Forward">⏩</button>
-                    <button class="transport-btn" title="Next">⏭</button>
-                    <div class="led" id="play-led"></div>
-                </div>
-                <div class="control-row dropdowns">
-                    <div class="select-with-nav">
-                        <label>MIDI File</label>
-                        <select><option>— Select MIDI —</option></select>
-                    </div>
-                    <div class="select-with-nav">
-                        <label>SoundFont</label>
-                        <select><option>— Select SoundFont —</option></select>
-                    </div>
-                </div>
-            </div>
+            <!-- all your controls, transport, viz, soundfont builder etc. go here unchanged -->
+            <!-- original UI sections from indexOrig.html inserted below -->
 
-            <div class="viz-container">
-                🎹 🌊 〰️<br>
-                <span id="time-display">0:00 / 0:00</span><br>
-                <em>Ready. Select a SoundFont and MIDI file to begin.</em>
+            <section id="controls">
+      <div class="control-row">
+        <div class="dropdowns">
+          <label>SoundFont:
+            <div class="select-with-nav">
+              <select id="sf2-select"><option value="">Loading…</option></select>
+              <div class="nav-buttons">
+                <button id="sf2-prev" class="nav-btn" title="Previous SoundFont">▲</button>
+                <button id="sf2-next" class="nav-btn" title="Next SoundFont">▼</button>
+              </div>
             </div>
+          </label>
+          <label>MIDI:
+            <select id="midi-select"><option value="">Loading…</option></select>
+          </label>
+          <label>Instrument:
+            <div class="select-with-nav">
+              <select id="instrument-select"><option value="-1">Auto (per-channel)</option></select>
+              <div class="nav-buttons">
+                <button id="instrument-prev" class="nav-btn" title="Previous Instrument">▲</button>
+                <button id="instrument-next" class="nav-btn" title="Next Instrument">▼</button>
+              </div>
+            </div>
+          </label>
+        </div>
+      </div>
 
-            <div class="soundfont-builder">
-                <h2>🔧 SoundFont Builder</h2>
-                <div class="builder-grid">
-                    <div class="available">
-                        <h3>Available SoundFonts</h3>
-                        <p>Loading catalog…</p>
-                    </div>
-                    <div class="selected">
-                        <h3>Selected Presets (0)</h3>
-                        <p>Select presets from the left to add them here.</p>
-                        <button class="clear-btn">Clear All</button>
-                    </div>
-                    <div class="output">
-                        <h3>Output Settings</h3>
-                        <button class="build-btn">🔨 Build SoundFont</button>
-                    </div>
-                </div>
+      <div class="control-row transport">
+        <button id="btn-prev" class="transport-sm" title="Restart / Previous track">⏮</button>
+        <button id="btn-playpause" title="Play">▶</button>
+        <button id="btn-stop" title="Stop" disabled>⏹</button>
+        <button id="btn-next" class="transport-sm" title="Next track">⏭</button>
+        <label class="loop-toggle">
+          <input type="checkbox" id="chk-loop"> Loop
+        </label>
+      </div>
+
+      <div class="control-row">
+        <label class="slider-label">Tempo:
+          <input type="range" id="tempo-slider" min="10" max="300" value="100" step="1">
+          <span id="tempo-value">100%</span>
+        </label>
+        <label class="slider-label">Volume:
+          <input type="range" id="volume-slider" min="0" max="100" value="80" step="1">
+          <span id="volume-value">80%</span>
+        </label>
+      </div>
+    </section>
+
+    <section id="progress-section">
+      <div class="viz-toolbar">
+        <button class="viz-toggle active" data-viz="piano" title="Piano keys">🎹</button>
+        <button class="viz-toggle" data-viz="waterfall" title="Note stream">🌊</button>
+        <button class="viz-toggle" data-viz="waveform" title="Waveform">〰️</button>
+      </div>
+      <div class="viz-container">
+        <canvas id="piano-canvas" width="800" height="80"></canvas>
+        <canvas id="waterfall-canvas" width="800" height="200" style="display:none"></canvas>
+        <canvas id="waveform-canvas" width="800" height="120" style="display:none"></canvas>
+      </div>
+      <div id="time-display">
+        <span id="current-time">0:00</span> / <span id="total-time">0:00</span>
+        <span id="voice-count"></span>
+      </div>
+    </section>
+
+    <section id="status">
+      <div id="status-text">Ready. Select a SoundFont and MIDI file to begin.</div>
+    </section>
+
+    <!-- ═══════════ SoundFont Builder ═══════════ -->
+    <section id="sf2-builder">
+      <div class="builder-header" id="builder-toggle">
+        <h2>🔧 SoundFont Builder</h2>
+        <span class="builder-arrow">▸</span>
+      </div>
+      <div class="builder-body" id="builder-body">
+
+        <div class="builder-row">
+          <div class="builder-sources" id="builder-sources">
+            <h3>Available SoundFonts</h3>
+            <div class="builder-hint">Loading catalog…</div>
+            <div id="sf2-catalog-list" class="catalog-list"></div>
+          </div>
+          <div class="builder-selection" id="builder-selection">
+            <h3>Selected Presets <span id="selection-count">(0)</span></h3>
+            <div id="selection-list" class="selection-list">
+              <div class="builder-hint">Select presets from the left to add them here.</div>
             </div>
+            <button id="btn-clear-selection" class="builder-btn btn-secondary" disabled>Clear All</button>
+          </div>
         </div>
 
-        <div class="footer">Mediocre by name, excellent by implementation. //PDC|Cld46Op|RaptrMin|GrokC1|Grok\\</div>
-        
-        <div class="scanlines"></div>
-        <div class="crt"></div>
+        <div class="builder-form">
+          <h3>Output Settings</h3>
+          <div class="builder-form-row">
+            <label>SoundFont Name:
+              <input type="text" id="sf2-build-name" placeholder="My Custom SoundFont" maxlength="64">
+            </label>
+            <label>Filename:
+              <input type="text" id="sf2-build-filename" placeholder="MyCustom.sf2" maxlength="64">
+            </label>
+          </div>
+          <div class="builder-form-row">
+            <label>Engineer:
+              <input type="text" id="sf2-build-engineer" placeholder="(optional)" maxlength="64">
+            </label>
+            <label>Copyright:
+              <input type="text" id="sf2-build-copyright" placeholder="(optional)" maxlength="64">
+            </label>
+          </div>
+          <div class="builder-form-row">
+            <label class="full-width">Comments:
+              <input type="text" id="sf2-build-comments" placeholder="(optional)" maxlength="128">
+            </label>
+          </div>
+          <div class="builder-actions">
+            <label class="overwrite-toggle">
+              <input type="checkbox" id="sf2-build-overwrite"> Overwrite if exists
+            </label>
+            <button id="btn-build-sf2" class="builder-btn btn-primary" disabled>🔨 Build SoundFont</button>
+          </div>
+          <div id="build-result" class="build-result"></div>
+        </div>
+
+      </div>
+    </section>
+        </div>
+
+        <div class="footer">Mediocre by name, excellent by implementation. //PDC|Cld46Op|RaptrMin|GrokC1|Grok\</div>
     </div>
 
     <script>
-        const themeBombColors = {
-            midnight: { brick: '#aa0000', brickDark: '#660000', brickLine: '#440000', graffiti: ['#ff88ff', '#ff44cc', '#aa00ff', '#ff2288', '#8800cc'] },
-            synthwave: { brick: '#cc0044', brickDark: '#770022', brickLine: '#550011', graffiti: ['#ff00ff', '#00ffff', '#ff44ff', '#00ffcc', '#ff88ff'] },
-            emerald: { brick: '#008822', brickDark: '#004411', brickLine: '#002200', graffiti: ['#00ff88', '#00cc66', '#44ffaa', '#00ff44', '#88ffcc'] },
-            frost: { brick: '#4477aa', brickDark: '#223355', brickLine: '#112244', graffiti: ['#88ddff', '#44aaff', '#77ccff', '#aaddff', '#ccffff'] },
-            hakerman: { brick: '#114411', brickDark: '#002200', brickLine: '#001100', graffiti: ['#00ff44', '#33ff88', '#66ffaa', '#99ffcc', '#ccffdd'] }
-        };
-
-        function updateBombColors(theme) {
-            const colors = themeBombColors[theme] || themeBombColors.hakerman;
-            document.getElementById('brick-bg').setAttribute('fill', colors.brick);
-            document.getElementById('brick-line1').setAttribute('fill', colors.brickDark);
-            document.getElementById('brick-line2').setAttribute('fill', colors.brickDark);
-            const stops = [document.getElementById('g-stop1'), document.getElementById('g-stop2'), document.getElementById('g-stop3'), document.getElementById('g-stop4'), document.getElementById('g-stop5')];
-            colors.graffiti.forEach((col, i) => { if (stops[i]) stops[i].setAttribute('stop-color', col); });
-        }
-
-        document.querySelectorAll('.theme-btn').forEach(btn => {
-            btn.addEventListener('click', () => {
-                const theme = btn.dataset.theme;
-                document.documentElement.setAttribute('data-theme', theme);
-                document.querySelectorAll('.theme-btn').forEach(b => b.classList.remove('active'));
-                btn.classList.add('active');
-                updateBombColors(theme);
-                const header = document.querySelector('.header');
-                header.style.transition = 'none';
-                header.style.transform = 'translateX(3px)';
-                setTimeout(() => { header.style.transition = 'transform 80ms'; header.style.transform = 'translateX(-3px)'; }, 10);
-                setTimeout(() => { header.style.transform = 'translateX(0)'; }, 180);
-            });
-        });
-
-        let isPlaying = false;
-        const playBtn = document.getElementById('play-pause-btn');
-        const led = document.getElementById('play-led');
-        playBtn.addEventListener('click', () => {
-            isPlaying = !isPlaying;
-            playBtn.textContent = isPlaying ? '❚❚' : '▶';
-            led.style.background = isPlaying ? '#33ff33' : '#111';
-            led.style.boxShadow = isPlaying ? '0 0 15px #33ff33' : 'none';
-        });
-
-        setTimeout(() => {
-            const ctx = new (window.AudioContext || window.webkitAudioContext)();
-            const o = ctx.createOscillator();
-            const g = ctx.createGain();
-            o.type = 'square';
-            o.frequency.setValueAtTime(220, ctx.currentTime);
-            g.gain.value = 0.12;
-            o.connect(g); g.connect(ctx.destination);
-            o.start();
-            setTimeout(() => o.stop(), 120);
-            updateBombColors(document.documentElement.getAttribute('data-theme'));
-        }, 420);
+      // dynamically load the compiled demo bundle
+      (function() {
+        const isDev = location.pathname.startsWith('/src/demo') || location.hostname === 'localhost';
+        const scriptSrc = isDev ? '/dist/demo.js' : './demo.js';
+        const s = document.createElement('script');
+        s.src = scriptSrc;
+        s.defer = true;
+        document.head.appendChild(s);
+      })();
     </script>
 </body>
 </html>
