--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -20,22 +20,23 @@
         <div class="header">| PütersDcat | FULLY CRACKED |
         </div>
         
-        <svg width="920" height="480" viewBox="0 0 920 480" xmlns="http://www.w3.org/2000/svg">
+        <svg id="bomb-svg" class="bomb-svg" width="920" height="480" viewBox="0 0 920 480" xmlns="http://www.w3.org/2000/svg">
             <defs>
                 <pattern id="brick" patternUnits="userSpaceOnUse" width="92" height="48">
-                    <rect width="92" height="48" fill="#aa0000"/>
-                    <rect width="92" height="8" fill="#660000"/>
-                    <rect x="46" y="24" width="46" height="8" fill="#660000"/>
+                    <rect id="brick-bg" width="92" height="48" fill="#aa0000"/>
+                    <rect id="brick-line1" width="92" height="8" fill="#660000"/>
+                    <rect id="brick-line2" x="46" y="24" width="46" height="8" fill="#660000"/>
                     <line x1="0" y1="0" x2="92" y2="0" stroke="#440000" stroke-width="4"/>
                     <line x1="0" y1="24" x2="92" y2="24" stroke="#440000" stroke-width="4"/>
                     <line x1="46" y1="0" x2="46" y2="48" stroke="#440000" stroke-width="4"/>
                 </pattern>
+
                 <linearGradient id="graffiti" x1="0%" y1="0%" x2="0%" y2="100%">
-                    <stop offset="0%" stop-color="#ff88ff"/>
-                    <stop offset="25%" stop-color="#00ffcc"/>
-                    <stop offset="50%" stop-color="#4488ff"/>
-                    <stop offset="75%" stop-color="#ff2288"/>
-                    <stop offset="100%" stop-color="#aa00ff"/>
+                    <stop id="g-stop1" offset="0%" stop-color="#ff88ff"/>
+                    <stop id="g-stop2" offset="25%" stop-color="#00ffcc"/>
+                    <stop id="g-stop3" offset="50%" stop-color="#4488ff"/>
+                    <stop id="g-stop4" offset="75%" stop-color="#ff2288"/>
+                    <stop id="g-stop5" offset="100%" stop-color="#aa00ff"/>
                 </linearGradient>
                 <filter id="neon" x="-50%" y="-50%" width="200%" height="200%">
                     <feGaussianBlur stdDeviation="6" result="glow1"/>
@@ -50,18 +51,26 @@
                     <feDropShadow dx="0" dy="0" stdDeviation="3" flood-color="#000000" flood-opacity="1"/>
                 </filter>
             </defs>
+
             <!-- RED BRICK BAR -->
             <rect x="0" y="0" width="920" height="92" fill="url(#brick)"/>
+
             <!-- THICK BLACK OUTLINE -->
             <text x="460" y="278" font-family="Impact, Arial Black, sans-serif" font-size="218" font-weight="900" fill="#111111" stroke="#000000" stroke-width="42" stroke-linejoin="round" paint-order="stroke fill" text-anchor="middle" dominant-baseline="middle" filter="url(#thick)">MIDIocre</text>
+
             <!-- VIBRANT GRAFFITI FILL + NEON -->
             <text x="460" y="278" font-family="Impact, Arial Black, sans-serif" font-size="218" font-weight="900" fill="url(#graffiti)" stroke="#112233" stroke-width="14" stroke-linejoin="round" paint-order="stroke fill" text-anchor="middle" dominant-baseline="middle" filter="url(#neon)">MIDIocre</text>
+
             <!-- WHITE HIGHLIGHT / DRIP SHINE -->
             <text x="452" y="265" font-family="Impact, Arial Black, sans-serif" font-size="218" font-weight="900" fill="#ffffff" opacity="0.35" stroke="none" text-anchor="middle" dominant-baseline="middle">MIDIocre</text>
+
             <!-- YOUR EDITED SIGNATURE -->
             <text x="760" y="430" font-family="Courier New, monospace" font-size="42" fill="#ff4422" opacity="0.9" text-anchor="end">ÂÎ ŠŁØP ČŘÊŴ</text>
+
             <!-- TINY TAG -->
             <text x="160" y="430" font-family="Courier New, monospace" font-size="26" fill="#00ff88" opacity="0.8" text-anchor="start">MIDIocre Player</text>
+
+            <!-- optional fuse group left out for now -->
         </svg>
 
         <!-- YOUR APP CONTROLS WRAPPED INSIDE THE KICK-ASS BORDER -->
