--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MIDIocre Player</title>
     <link rel="stylesheet" href="demo.css">
+    <!-- Preload graffiti winner fonts so they're ready immediately -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&family=Sedgwick+Ave+Display&display=swap">
     <style>
         /* Tiny override to define app font variable; applied only to wrapper via CSS */
-        :root { --app-font: 'Courier New', 'Lucida Console', 'Consolas', monospace; }
+        :root { --app-font: 'Sedgwick Ave Display', 'Sedgwick Ave', 'Courier New', 'Lucida Console', monospace; }
     </style>
 </head>
 <body>
@@ -45,7 +49,7 @@
                     </feMerge>
                 </filter>
                 <filter id="thick" x="-30%" y="-30%" width="160%" height="160%">
-                    <feDropShadow dx="0" dy="0" stdDeviation="3" flood-color="#000000" flood-opacity="1"/>
+                    <feDropShadow id="bomb-dropshadow" dx="0" dy="0" stdDeviation="3" flood-color="#000000" flood-opacity="1"/>
                 </filter>
             </defs>
 
@@ -53,13 +57,13 @@
             <rect x="0" y="0" width="920" height="92" fill="url(#brick)"/>
 
             <!-- THICK BLACK OUTLINE -->
-            <text x="460" y="278" font-family="Impact, Arial Black, sans-serif" font-size="218" font-weight="900" fill="#111111" stroke="#000000" stroke-width="42" stroke-linejoin="round" paint-order="stroke fill" text-anchor="middle" dominant-baseline="middle" filter="url(#thick)">MIDIocre</text>
+            <text id="bomb-outline" x="460" y="278" font-family="Impact, Arial Black, sans-serif" font-size="218" font-weight="900" fill="#111111" stroke="#000000" stroke-width="42" stroke-linejoin="round" paint-order="stroke fill" text-anchor="middle" dominant-baseline="middle" filter="url(#thick)">MIDIocre</text>
 
             <!-- VIBRANT GRAFFITI FILL + NEON -->
-            <text x="460" y="278" font-family="Impact, Arial Black, sans-serif" font-size="218" font-weight="900" fill="url(#graffiti)" stroke="#112233" stroke-width="14" stroke-linejoin="round" paint-order="stroke fill" text-anchor="middle" dominant-baseline="middle" filter="url(#neon)">MIDIocre</text>
+            <text id="bomb-fill" x="460" y="278" font-family="Impact, Arial Black, sans-serif" font-size="218" font-weight="900" fill="url(#graffiti)" stroke="#112233" stroke-width="14" stroke-linejoin="round" paint-order="stroke fill" text-anchor="middle" dominant-baseline="middle" filter="url(#neon)">MIDIocre</text>
 
             <!-- WHITE HIGHLIGHT / DRIP SHINE -->
-            <text x="452" y="265" font-family="Impact, Arial Black, sans-serif" font-size="218" font-weight="900" fill="#ffffff" opacity="0.35" stroke="none" text-anchor="middle" dominant-baseline="middle">MIDIocre</text>
+            <text id="bomb-shine" x="452" y="265" font-family="Impact, Arial Black, sans-serif" font-size="218" font-weight="900" fill="#ffffff" opacity="0.35" stroke="none" text-anchor="middle" dominant-baseline="middle">MIDIocre</text>
 
             <!-- YOUR EDITED SIGNATURE -->
             <text x="760" y="430" font-family="Courier New, monospace" font-size="42" fill="#ff4422" opacity="0.9" text-anchor="end">ÂÎ ŠŁØP ČŘÊŴ</text>
@@ -77,14 +81,27 @@
                 <div class="header-controls">
                     <div class="theme-picker">
                         <label for="font-select">Font:</label>
+                        <span id="font-selector-row">
                         <select id="font-select">
-                            <option value="">System</option>
-                            <option value="Sedgwick Ave">Sedgwick Ave</option>
-                            <option value="Wallpoet">Wallpoet</option>
-                            <option value="Permanent Marker">Permanent Marker</option>
-                            <option value="Rock Salt">Rock Salt</option>
-                            <option value="Calligraffitti">Calligraffitti</option>
+                            <option value="Sedgwick Ave Display">Sedgwick Ave Display ★</option>
+                            <option value="Sedgwick Ave">Sedgwick Ave ★</option>
+                            <option value="">— System default —</option>
+                            <optgroup label="🖌 Spray / Marker">
+                              <option value="Rubik Spray Paint">Rubik Spray Paint</option>
+                              <option value="Permanent Marker">Permanent Marker</option>
+                              <option value="Rock Salt">Rock Salt</option>
+                            </optgroup>
+                            <optgroup label="✍ Tag / Handwritten">
+                              <option value="Calligraffitti">Calligraffitti</option>
+                              <option value="Boogaloo">Boogaloo</option>
+                            </optgroup>
+                            <optgroup label="🧱 Bold / Distressed">
+                              <option value="Rubik Dirt">Rubik Dirt</option>
+                              <option value="Bangers">Bangers</option>
+                              <option value="Wallpoet">Wallpoet (Stencil)</option>
+                            </optgroup>
                         </select>
+                        </span>
                         <button class="theme-btn" data-theme="midnight">🌙</button>
                         <button class="theme-btn" data-theme="synthwave">🌆</button>
                         <button class="theme-btn" data-theme="emerald">🌲</button>
