--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -243,7 +243,7 @@
     </section>
         </div>
 
-        <div class="footer">Mediocre by name, excellent by implementation. PDC|Cld46Op|RaptrMin|GrokC1|Grok</div>
+        <div class="footer">Mediocre by name, excellent by implementation. *PdC*Cld46Op*RaptrMin*GrokC1*Grok*</div>
     </div>
 
     <script>
